2023-02-18  Luigi Scarso <luigi.scarso@gmail.com> 
    * new "late special" feature by Phelype Oleinik,
      heavily adapted by H.Hagen.


2023-02-05  Luigi Scarso <luigi.scarso@gmail.com> 
    *  Fix typos (thanks to J. Friedrich) 

2023-01-24  Luigi Scarso <luigi.scarso@gmail.com> 
    *  fix for r2l multiline link etc rectangles (H.Hagen)

2023-01-17  Luigi Scarso <luigi.scarso@gmail.com> 
    * \pdfvariable omitmediabox 1 (H.Hagen)
    * luatex 1.16.0

2022-12-05  Luigi Scarso <luigi.scarso@gmail.com> 
    * complementary patch for revision 7551 (lua end compatibility) (H.Hagen)

2022-12-03  Luigi Scarso <luigi.scarso@gmail.com> 
    * Track last node in ligature handling (M.Krüger)

2022-12-03  Luigi Scarso <luigi.scarso@gmail.com> 
    * Make disc node prev. pointers more uniform (M.Krüger)

2022-11-20  Luigi Scarso <luigi.scarso@gmail.com> 
    * set \variablefam = -1 as initial value (H.Hagen).

2022-11-20  Luigi Scarso <luigi.scarso@gmail.com> 
    * Ensured that load_hyphenation has enough Lua stack, and pops the latest table pushed in (Michal Vlasák).

2022-11-10  Luigi Scarso <luigi.scarso@gmail.com> 
    * Better error message if setlocale fails

2022-10-28  Luigi Scarso <luigi.scarso@gmail.com> 
    * \variablefam (backport from luametatex, handy for latex) (H .Hagen)

2022-10-22  Luigi Scarso <luigi.scarso@gmail.com> 
     * STOP COMMITS TO SVN REPO -- WORK IN PROGRESS

2022-10-22  Luigi Scarso <luigi.scarso@gmail.com> 
     * porting texlive patch r53155 -- WORK IN PROGRESS

2022-09-29  Luigi Scarso <luigi.scarso@gmail.com> 
     * Fixed an infinite loop with --halt-on-error option (K.Berry)

2022-08-16  Luigi Scarso <luigi.scarso@gmail.com> 
     * Accent 0xFFFD but still error on invalid utf (compatible) (H.Hagen)
     * omitinfodict added: \pdfvariable omitinfodict 1 omit Info dicttionary (H.Hagen)

2022-08-05  Luigi Scarso <luigi.scarso@gmail.com> 
     * Fixed a missed lua_settop in lua_appendtovlist_callback() (thanks to Hironori KITAGAWA)
