@@ -1,7 +1,9 @@
 2023-02-18  Luigi Scarso <luigi.scarso@gmail.com> 
+    * Fixed the "Invalid unicode ranges in CMap beginbfrange operator bug" as in pdfTeX (Hàn Thế Thành)
+
+2023-02-18  Luigi Scarso <luigi.scarso@gmail.com> 
     * new "late special" feature by Phelype Oleinik,
       heavily adapted by H.Hagen.
-
 
 2023-02-05  Luigi Scarso <luigi.scarso@gmail.com> 
     *  Fix typos (thanks to J. Friedrich) 
